fixed z-index issues for page animations

--- a/client/app/style/animation.less
+++ b/client/app/style/animation.less
@@ -46,12 +46,12 @@
 
 
 @keyframes scaleUp {
-  from    { .transform(scale(0.8) translateZ(-1px)); }
+  from    { .transform(scale(0.8)); }
 }
 
 @keyframes scaleDown {
-  from    { .transform(scale(1) translateZ(0px)); }
-  to      { .transform(scale(0.75) translateZ(-100px)); }
+  from    { .transform(scale(1)); }
+  to      { .transform(scale(0.75)); }
 
 }
 
