--- a/client/app/style/transition.less
+++ b/client/app/style/transition.less
@@ -1,73 +1,85 @@
 
+
+//@page-transition-duration: 1000ms;
 //@page-transition-duration: 500ms;
 //@page-transition-duration: 20000ms;
-//@page-transition-duration: 10000ms;
 @page-transition-duration: 1000ms;
 
+@front-z: 9999;
+@back-z: 8888;
 
-.mainview {
+//TODO stagger animations
 
-  &.ng-enter-active {
-//    .transform(translateX(100%) translateY(100%) translateZ(100px));
-  }
 
+.mainview.ng-animate {
+  .transition(all @page-transition-duration ease);
 }
 
 
 body.transitionFromaccounts.transitionTomain {
-  .mainview.MainCtrl.ng-enter-active { animation: slideInLeftPartial @page-transition-duration both ease; z-index: 8888; }
-  .mainview.AccountsCtrl.ng-leave-active { animation: slideOutRight @page-transition-duration both ease; z-index: 9999; }
+  .mainview.MainCtrl.ng-enter { animation: slideInLeftPartial @page-transition-duration both ease; z-index: @back-z; }
+  .mainview.AccountsCtrl.ng-leave { animation: slideOutRight @page-transition-duration both ease; z-index: @front-z; }
 }
 body.transitionToaccounts.transitionFrommain {
-  .mainview.MainCtrl.ng-leave-active { animation: slideOutLeftPartial @page-transition-duration both ease; z-index: 8888; }
-  .mainview.AccountsCtrl.ng-enter-active { animation: slideInRightStacked @page-transition-duration both ease; z-index: 9999; }
+  .mainview.MainCtrl.ng-leave { animation: slideOutLeftPartial @page-transition-duration both ease; z-index: @back-z; }
+  .mainview.AccountsCtrl.ng-enter { animation: slideInRightStacked @page-transition-duration both ease; z-index: @front-z; }
 }
 
 body.transitionToaccounts.transitionFromaccountdetail {
-  .mainview.AccountsCtrl.ng-enter-active { animation: slideInLeftPartial @page-transition-duration both ease; z-index: 8888; }
-  .mainview.AccountdetailCtrl.ng-leave-active { animation: slideOutRight @page-transition-duration both ease; z-index: 9999; }
+  .mainview.AccountsCtrl.ng-enter { animation: slideInLeftPartial @page-transition-duration both ease; z-index: @back-z; }
+  .mainview.AccountdetailCtrl.ng-leave { animation: slideOutRight @page-transition-duration both ease; z-index: @front-z; }
 }
 body.transitionFromaccounts.transitionToaccountdetail {
-  .mainview.AccountsCtrl.ng-leave-active { animation: slideOutLeftPartial @page-transition-duration both ease; z-index: 8888; }
-  .mainview.AccountdetailCtrl.ng-enter-active { animation: slideInRightStacked @page-transition-duration both ease; z-index: 9999; }
+  .mainview.AccountsCtrl.ng-leave { animation: slideOutLeftPartial @page-transition-duration both ease; z-index: @back-z; }
+  .mainview.AccountdetailCtrl.ng-enter { animation: slideInRightStacked @page-transition-duration both ease; z-index: @front-z; }
 }
 
 
 
 body.transitionFromsettings {
 
-  .mainview.SettingsCtrl.ng-leave-active { animation: slideOutDown @page-transition-duration both ease; z-index: 9999; }
-  .mainview.ng-enter-active { animation: scaleUp @page-transition-duration both ease; z-index: 8888; }
+  .mainview.SettingsCtrl.ng-leave { animation: slideOutDown @page-transition-duration both ease; z-index: @front-z; }
+  .mainview.ng-enter { animation: scaleUp @page-transition-duration both ease; z-index: @back-z; }
 
 }
 
 body.transitionTosettings {
-  .mainview.ng-enter-active { animation: slideInUp @page-transition-duration both ease; z-index: 9999; }
-  .mainview.ng-leave-active { animation: scaleDown @page-transition-duration both ease; z-index: 8888; }
+  .mainview.ng-enter { animation: slideInUp @page-transition-duration both ease; z-index: @front-z; }
+  .mainview.ng-leave { animation: scaleDown @page-transition-duration both ease; z-index: @back-z; }
 }
+
 
 
 
 
 body.transitionTologin {
-  .mainview.LoginCtrl.ng-enter-active { animation: scaleUp @page-transition-duration both ease; z-index: 8888; }
-  .mainview.ng-leave-active { animation: slideOutDown @page-transition-duration both ease; z-index: 9999; }
+  .mainview.LoginCtrl{ z-index: @back-z; }
+  .mainview.LoginCtrl.ng-enter { animation: scaleUp @page-transition-duration both ease; }
+  .mainview { z-index: @front-z; }
+  .mainview.ng-leave { animation: slideOutDown @page-transition-duration both ease; }
 }
 
 body.transitionFromlogin {
-  .mainview.LoginCtrl.ng-leave-active { animation: scaleDown @page-transition-duration both ease; z-index: 8888; }
-  .mainview.ng-enter-active { animation: slideInUp @page-transition-duration both ease; z-index: 9999; }
+  .mainview.LoginCtrl { z-index: @back-z; }
+  .mainview.LoginCtrl.ng-leave { animation: scaleDown @page-transition-duration both ease; }
+  .mainview { z-index: @front-z; }
+  .mainview.ng-enter { animation: slideInUp @page-transition-duration both ease; }
 }
 
 
 
 body.transitionFromquickaccess.transitionTologin {
-  .mainview.QuickaccessCtrl.ng-leave-active { animation: slideOutDown @page-transition-duration both ease; z-index: 9999; }
-  .mainview.LoginCtrl.ng-enter-active { animation: scaleUp @page-transition-duration both ease; z-index: 8888; }
+
+  .mainview.QuickaccessCtrl { z-index: @front-z; }
+  .mainview.QuickaccessCtrl.ng-leave { animation: slideOutDown @page-transition-duration both ease; }
+  .mainview.LoginCtrl { z-index: @back-z; }
+  .mainview.LoginCtrl.ng-enter { animation: scaleUp @page-transition-duration both ease; }
 }
-body.transitionFromquickaccess {
-  .mainview.QuickaccessCtrl.ng-leave-active { animation: scaleDown @page-transition-duration both ease; z-index: 8888; }
-  .mainview.ng-enter-active { animation: slideInUp @page-transition-duration both ease; z-index: 9999; }
+body.transitionFromquickaccess:not(.transitionTologin) {
+  .mainview.QuickaccessCtrl { z-index: @back-z; }
+  .mainview.QuickaccessCtrl.ng-leave { animation: scaleDown @page-transition-duration both ease; }
+  .mainview { z-index: @front-z; }
+  .mainview.ng-enter { animation: slideInUp @page-transition-duration both ease; }
 }
 
 
